...
        authLogo.translatesAutoresizingMaskIntoConstraints = false
        authLogo.image = UIImage(named: "auth_screen_logo")
        authLogo.contentMode = .scaleAspectFill
        return authLogo
    }()

    private let enterButton: UIButton = {
        let enterButton = UIButton()
        enterButton.translatesAutoresizingMaskIntoConstraints = false
        enterButton.backgroundColor = .YPWhite
        enterButton.setTitle("Войти", for: .normal)
        enterButton.accessibilityIdentifier = "enterButton"
        enterButton.setTitleColor(.YPBlack, for: .normal)
        enterButton.titleLabel?.font = .systemFont(ofSize: 17, weight: .bold)
        enterButton.layer.cornerRadius = 16
        enterButton.layer.masksToBounds = true
        enterButton.addTarget(nil, action: #selector(enterButtonTapped), for: .touchUpInside)
...
